--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Uključen i uključen;\nWi-Fi je aktiviran i povezan;\nWi-Fi lozinka nije nedavno promijenjena.",
     "dont_remind_again_uppercase": "NEMOJTE PONOVO PODSJEĆATI",
     "storage_tips_title": "Savjeti za skladištenje:",
-    "heat_pump_oem": "PRO serije PTV",
+    "heat_pump_oem": "PTV s fiksnom brzinom",
     "td22_drying_empty_water_tank": "Sušenje – Ispraznite spremnik za vodu",
     "td22_drying_paused": "Sušenje pauzirano",
     "td22_drying_finished": "Sušenje završeno",
@@ -2592,7 +2592,7 @@
     "months": "Mjeseci",
     "end_at": "Završi na",
     "health": "Zdravlje",
-    "fridge_water_tank_install_state": "Vodenispremnik",
+    "fridge_water_tank_install_state": "Vodeni spremnik",
     "fridge_open_refrigerator_door_alarm": "Vrata hladnjaka se normalno otvaraju i zatvaraju",
     "fridge_open_freeze_door_alarm": "Vrata zamrzivača se normalno otvaraju i zatvaraju",
     "fridge_open_variation_door_alarm": "MyFreshChoice vrata se normalno otvaraju i zatvaraju",
@@ -2644,9 +2644,9 @@
     "refreshing_program_list_tips": "Popis programa trenutno osvježava. U međuvremenu je onemogućeno korištenje uređaja.",
     "pind_config_wifi_new_step1": "Dodirnite i držite tipku \"on/off\" 5 sekundi dok se ne pojavi simbol Wi-Fi mreže.",
     "pind_config_wifi_new_step2": "Dodirnite i držite simbol Wi-Fi mreže 5 sekundi dok se ne pojavi \"C\".",
-    "pind_config_wifi_new_step3": "Dodirnite Wi-Fi simbol. \"C\" će početi treptati. Kliknite SLJEDEĆE da biste nastavili.",
-    "ble_ota_hob_new_step4": "Kliznite prstom preko prstena da biste prešli s \"ISKLJUČENO\" na \"uključeno\".",
-    "ble_ota_hob_new_step5": "Sada pritisnite klizač jednim prstom i držite 3 sekunde dok se ne pojavi 3.00\". Nakon nekoliko sekundi započet će odbrojavanje.\n",
+    "pind_config_wifi_new_step3": "Dodirnite Wi-Fi simbol. \"C\" će početi treptati. Kliknite NEXT da biste nastavili.",
+    "ble_ota_hob_new_step4": "Kliznite prstom preko prstena da biste prešli s \"OFF\" na \"ON\".",
+    "ble_ota_hob_new_step5": "Sada pritisnite klizač jednim prstom i držite 3 sekunde dok se ne pojavi \"3.00\". Nakon nekoliko sekundi započeti će odbrojavanje.\nZa nastavak pritisnite NEXT.",
     "edit_adition_data": "urediti dodatne podatke",
     "mo": "Pon",
     "tu": "Uto",
@@ -2663,9 +2663,9 @@
     "hob_induction3": "Povežite se i otkrijte sve recepte (3/4)",
     "hob_induction3_tips": "Naučite kako povezati svoje pametno posuđe i pregledavajte širok raspon recepata korak po korak, posebno napravljenih za kuhanje s preciznom temperaturom.",
     "hob_induction4": "Inspirirajte se i postavite svoje preferencije (4/4)",
-    "hob_induction4_tips": "Istražite sve funkcije, pronađite digitalni priručnik i održavajte svoj uređaj ažuriranim s najnovijim ažuriranjima firmvera.",
+    "hob_induction4_tips": "Istražite sve funkcije, pronađite digitalni priručnik i održavajte svoj uređaj ažuriranim s najnovijim ažuriranjima.",
     "get_started": "Započnite",
-    "hob_get_started_tips": "Saznajte što možete učiniti sa svojom pločom za kuhanje. Pokazat ćemo vam kako to funkcionira.",
+    "hob_get_started_tips": "Saznajte što možete učiniti sa svojom pločom za kuhanje. Pokazati ćemo vam kako to funkcionira.",
     "refresh_program_list": "Osvježi popis programa",
     "refresh_program_list_tips": "Upravo ćete osvježiti popis popisa programa. Proces osvježavanja će onemogućiti korištenje uređaja na cca. 2 minute.",
     "zones_control": "Kontrola zona",
@@ -2706,7 +2706,7 @@
     "bottle_in_inven": "BOCE U INVENTARU",
     "key_lock_des_s": "Uključivanje zaključavanja tipki onemogućit će zaslon.",
     "door_notification_des": "Primajte obavijesti kada se vrata otvore.",
-    "wcc_door_alarm_des": "Alarm se šalje kada se vrata otvore.",
+    "wcc_door_alarm_des": "Alarm se javlja kada se vrata otvore.",
     "temp_control": "Postavke uređaja",
     "lock_settings": "Postavke zaključavanja",
     "human_sensing": "Senzor blizine",
@@ -2737,9 +2737,9 @@
     "more_errors_with_number": "## više pogrešaka",
     "next_step": "SLJEDEĆI KORAK",
     "rf_start_convert_250": "Imate start Convert, zamrzivač će se pretvoriti u Pametnu zonu s temperaturom od 0 °C; hladnjak će se pretvoriti u 4 °C, obratite pozornost na skladištenje hrane.",
-    "rf_start_convert_213": "Imate start Convert, zamrzivač će se pretvoriti u hladnjak s temperaturom od 4 °C, obratite pozornost na skladištenje hrane.",
-    "rf_close_convert_250": "Imate blizu Convert, Pametna zona će se pretvoriti u zamrzivač s temperaturom od -18 °C, obratite pozornost na skladištenje hrane.",
-    "rf_close_convert_213": "Imate close Convert, hladnjak će se pretvoriti u zamrzivač s temperaturom od -18 °C, obratite pozornost na skladištenje hrane.",
+    "rf_start_convert_213": "Convert je pokrenut, zamrzivač će se pretvoriti u hladnjak s temperaturom od 4 °C, obratite pozornost na skladištenje hrane.",
+    "rf_close_convert_250": "Convert je zatvoren, Smart Zone će se pretvoriti u zamrzivač s temperaturom od -18 °C, obratite pozornost na skladištenje hrane.",
+    "rf_close_convert_213": "Uključen je Close Convert, hladnjak će se pretvoriti u zamrzivač s temperaturom od -18 °C, obratite pozornost na skladištenje hrane.",
     "unfold_zone": "Otvori sve zone",
     "fold_zone": "Preklopi sve zone",
     "my_group": "Moje grupe",
@@ -2781,7 +2781,7 @@
     "fridge_fan_failure": "Ventilator xxxxx",
     "duct_at_least_zone_tip": "Dodajte barem jednu zonu.",
     "ac_energy_confirmation": "Potvrda",
-    "ac_energy_content": "Svrha i osnova obrade vaših osobnih podataka je osigurati da može izvesti ispravnu potrošnju energije, a izlaz performansi hlađenja ili grijanja neće obrađivati nevažne informacije. Ova obrada dopuštena je Politikom zaštite podataka.\r\nPažljivo pročitajte Pravila o zaštiti podataka. Tek kada pristanete na to, izvozit ćemo podatke o potrošnji energije, hlađenju i grijanju i poslati ih u vaš registrirani pretinac e-pošte u obliku e-pošte.",
+    "ac_energy_content": "Svrha i osnova obrade vaših osobnih podataka je osigurati da može izvesti ispravnu potrošnju energije, a izlaz performansi hlađenja ili grijanja neće obrađivati nevažne informacije. Ova obrada dopuštena je Politikom zaštite podataka.\nPažljivo pročitajte Pravila o zaštiti podataka. Nakon davanja privole, izvozit ćemo podatke o potrošnji energije, hlađenju i grijanju i poslati ih u vaš registrirani pretinac e-pošte u obliku e-pošte.",
     "ac_check": "Provjera",
     "ac_energy_send": "E-pošta će biti poslana na ovu adresu kasnije.",
     "ac_energy_send_error": "Ista e-pošta smije se poslati samo jednom u roku od 10 minuta.",
@@ -2819,11 +2819,11 @@
     "asko_wine_sabbath_deactivate": "Deaktiviraj Sabbath Mode",
     "asko_wine_sabbath_deactivate_c": "Sabbath način rada aktiviran je na vašem vinskom hladnjaku. Slijedite korake da biste ga deaktivirali:",
     "asko_wine_sabbath_deactivate_tip": "Pritisnite i držite tipku <b>Lock 00_11_22</b> na ormariću za vino <b>3 sekunde</b>.",
-    "asko_wine_sabbath_deactivate_tip_1": "Da biste u potpunosti onemogućili subotnji način rada, isključite gumb za uključivanje/isključivanje u izborniku postavki.",
+    "asko_wine_sabbath_deactivate_tip_1": "Da biste u potpunosti onemogućili Sabbath mode, isključite gumb za uključivanje/isključivanje u izborniku postavki.",
     "to_settings": "U postavke",
-    "turn_off_sabbath_key_lock": "Prvo deaktivirajte način šabata pritiskom na tipku Lock na uređaju 3 sekunde.",
+    "turn_off_sabbath_key_lock": "Prvo deaktivirajte Sabbath mode pritiskom na tipku Lock na uređaju 3 sekunde.",
     "program_will_start_after": "Program će započeti nakon:",
-    "wine_sabbath_toast": "Način subotnjeg je aktiviran. Da biste ponovno koristili sve funkcije, deaktivirajte subotnji način rada.",
+    "wine_sabbath_toast": "Sabbath mode je aktiviran. Da biste ponovno koristili sve funkcije, deaktivirajte Sabbath mode.",
     "new_email_tips": "Unesite novu adresu e-pošte koju želite koristiti za svoj Connectlife račun.",
     "new_email_title": "NOVA E-POŠTA",
     "best_d_b": "Najbolje je piti prije",
@@ -2872,7 +2872,7 @@
     "user_content_2": "Nakon dodavanja proizvoda za obradu zraka, namjenski unos \"njege zraka\" prikladno će se prikazati i na početnoj stranici aplikacije i na početnoj stranici uređaja kako bi korisnici mogli lako pristupiti.",
     "manage_content_1": "Nakon dodavanja novog uređaja za obradu zraka, lako generirajte prikladne prostorije.",
     "manage_content_2": "Da biste uredili ili stvorili sobe, kliknite unos \"Upravljanje sobama\" koji se nalazi na stranici popisa uređaja.",
-    "manage_content_3": "Istražite scenu Air Care kako biste vizualizirali sobe u 3D-u i provjerili stanje zraka svake sobe klikom na njih.",
+    "manage_content_3": "Istražite Air Care kako biste vizualizirali sobe u 3D-u i provjerili stanje zraka svake sobe klikom na njih.",
     "manage_content_4": "Besprijekorno upravljajte sobama dodavanjem novih katova, omogućujući vam prebacivanje između katova kako biste vidjeli različite sobe i uređaje.",
     "select_content_1": "Početni unaprijed postavljeni način za optimizaciju svake sobe postavljen je na \"općenito\". Kliknite \"općenito\" da biste se prebacili na druge načine kao što su kućni ljubimac, dijete, starije osobe ili sport.",
     "select_content_2": "Svaki način rada dolazi sa zadanim parametrima uređaja prilagođenim određenim atributima prostorije. Kliknite \"uredi\" da biste prilagodili parametre ili \"vratite\" da biste se vratili na početne postavke.",
@@ -2900,7 +2900,7 @@
     "delete_the_favourite_tips": "Jeste li sigurni da želite izbrisati favorite?",
     "delete_all_favourite_tips": "Jeste li sigurni da želite obrisati sve omiljene stavke?",
     "tri_dhw_priority_tip_key": "Kada kupac aktivira potražnju za toplom vodom, jedinica će dati prednost zagrijavanju tople vode i privremeno obustaviti način hlađenja / grijanja.",
-    "tri_sterilization_tip_key": "Dezinfekcija se može otvoriti ručno, a temperatura spremnika se podiže na 75 °C, što će vodu održati čišćom i zdravom.",
+    "tri_sterilization_tip_key": "Dezinfekcija se može pokrenuti ručno, a temperatura spremnika se podiže na 75 °C, što će vodu održati čišćom i zdravom.",
     "tri_climate_curve_key": "Ima integrirane funkcije automatskog podešavanja temperature izlazne vode za načine grijanja i hlađenja. Nakon aktiviranja ove funkcije, ciljna temperatura jedinice automatski će se postaviti na temelju temperature okoline.",
     "total": "Ukupan",
     "air_care_no_good": "Zrak nije dobar, molim vas počnite optimizirati.",
@@ -2928,11 +2928,11 @@
     "air_care_tips_content_2": "Klikom na 3D sobu mogu se zamijeniti kartice sobe.",
     "air_care_tips_content_3": "Unesite postavke za optimizaciju parametara.",
     "error_sycronizing_your_device": "Pogreška pri sinkronizaciji vašeg uređaja.",
-    "error_cause_missing_data": "Došlo je do pogreške na uređaju. To može uzrokovati podatke koji nedostaju.",
+    "error_cause_missing_data": "Došlo je do pogreške na uređaju. To može uzrokovati brisanje podataka.",
     "water_drain": "Odvod vode",
-    "tank": "Tenk",
-    "smart_tv": "Pametni TV",
-    "add_tv_step_1": "Uključite televizor i provjerite je li telefon na istom LAN-u kao i televizor.",
+    "tank": "Rezervorar",
+    "smart_tv": "Smart TV",
+    "add_tv_step_1": "Uključite televizor i provjeriteda li je telefon na istom LAN-u kao i televizor.",
     "searching_for_device": "Traženje uređaja ...",
     "searching_for_device_tips": "Pričekajte da se četveroznamenkasti kôd para pojavi na TV zaslonu.",
     "enter_pair_code": "Unesite kod para",
@@ -2944,7 +2944,7 @@
     "select_signal_source": "Odabir izvora signala",
     "try_to_search_for_something": "Pokušajte nešto potražiti",
     "im_listening": "Slušam...",
-    "long_press_to_speak": "Dugi tisak za govor",
+    "long_press_to_speak": "Držite dugo za govor",
     "tv_pin_incorrect_tips": "Nažalost, kod koji ste unijeli je pogrešan. Provjerite i ponovno unesite!",
     "select_smart_tv": "Odabir pametnog televizora",
     "auto_dose_quantity": "Količina automatske doze",
@@ -3112,10 +3112,10 @@
     "temperature_guide_content": "Prave temperature za čuvanje, posluživanje i odležavanje vina mogu varirati ovisno o vrsti vina, kao i osobnim preferencijama. Evo nekih općih smjernica za temperaturu.",
     "light_white": "svijetlo\nbijelo",
     "medium_white": "Srednje\nbijelo",
-    "full_white": "potpuno\nbijelo",
+    "full_white": "bijelo",
     "light_red": "svijetlo\ncrveno",
     "medium_red": "srednje\ncrveno",
-    "full_red": "puno\ncrveno",
+    "full_red": "tamno\ncrveno",
     "sparkling_left": "Cava\nŠampanjac\nVintage šampanjac\nAsti Spumante\nProsecco",
     "lightWhite_left": "Albarino\nAmeis\nSauvignon Blanc\nFalanghina\nGavi Di Gavi\nGruner Veltliner\nPicpoul De Pinet",
     "mediumWhite_left": "Assyrtiko\nBacchus\nCatarratto\nFiano\nInzolia\nGodello\nGarganega\nGreco Di Tufo\nGewürtztraminer",
@@ -3231,12 +3231,12 @@
     "hidden": "Sakriven",
     "reset_program_list": "Ponovno postavite popis programa",
     "reset_program_list_tips": "Ovo će vratiti vaš popis programa na zadane postavke na vašem uređaju i aplikaciji.",
-    "my_address_desc": "Nekoliko objašnjenja zašto korisnik mora unijeti adresu. Lajk za pomoć i podršku i tako dalje.",
+    "my_address_desc": "Nekoliko objašnjenja zašto korisnik mora unijeti adresu. Npr. za pomoć, podršku itd.",
     "reset_program_list_pop_tips": "Upravo ćete osvježiti popis popisa programa. Proces osvježavanja će onemogućiti korištenje uređaja na cca. 2 minute.",
     "stand_by_title": "Vaš uređaj je u stanju pripravnosti.",
     "stand_by_content": "1. Pritisnite gumb za uključivanje više od 3 sekunde da biste promenili status.\n2. Ako ne radi, prvo otključajte uređaj.",
-    "hum_box_title": "Kutija za vlažnost",
-    "hum_box_content": "Kutija za vlažnost pomaže u povećanju vlažnosti Wine Climate Cabineta. Time se sprječava pad vlažnosti ispod 50%, što se može dogoditi u određenim uvjetima. \n\n\n Kutija za vlagu izrađena je od gline, prirodnog materijala s pravim karakteristikama da prvo upije vodu, a zatim joj dopusti da ispari kako bi se povećala vlažnost.",
+    "hum_box_title": "Humidity Box",
+    "hum_box_content": "Humidity Box pomaže u povećanju vlažnosti Wine Climate Cabineta. Time se sprječava pad vlažnosti ispod 50%, što se može dogoditi u određenim uvjetima. \n\nHumidity Box izrađena je od gline, prirodnog materijala s pravim karakteristikama da prvo upije vodu, a zatim joj dopusti da ispari kako bi se povećala vlažnost.",
     "hum_box_how": "Kako koristiti Humidity Box",
     "hum_box_how_o": "Napunite kutiju s 0,5 litara vode.",
     "hum_box_how_t": "Stavite kutiju za vlažnost u ormarić.",
@@ -3246,15 +3246,15 @@
     "empty_air_floor": "Nije odabrana nijedna soba",
     "hide_program": "Sakrij program",
     "hide_program_desc": "Ako se aktivira, program neće biti vidljiv na vašem uređaju i u aplikaciji.",
-    "water_drain_desc": "Ova značajka vam omogućuje da odaberete što će uređaj učiniti s kondenziranom vodom koja nastaje tijekom sušenja. \"Spremnik\" znači da se ta voda skuplja u namjenskom spremniku za vodu i treba ga povremeno prazniti. „Odvod“ znači da je korisnik priključio uređaj na odvod otpadnih voda, tako da se voda može zbrinuti izravno, zaobilazeći spremnik.",
+    "water_drain_desc": "Ova značajka vam omogućuje da odaberete što će uređaj učiniti s kondenziranom vodom koja nastaje tijekom sušenja. \"Tank\" (spremnik) znači da se ta voda skuplja u namjenskom spremniku za vodu i treba ga povremeno prazniti. „Drain“ (odvod) znači da je korisnik priključio uređaj na odvod, tako da se voda može zbrinuti izravno, zaobilazeći spremnik.",
     "water_drain_tips": "Ova je značajka inicijalno postavljena na uređaju. Ovdje će se prikazati zadana opcija odabrana na uređaju.",
     "air_care_general": "Općenito",
     "air_care_pet": "Ljubimac",
     "air_care_child": "Dijete",
     "air_care_elder": "Stariji",
-    "drum_illumination_desc": "Drum ilimination osvjetljava unutrašnjost bubnja, što vam pomaže prilikom punjenja i pražnjenja uređaja - jednostavno je lakše pronaći zaostalu čarapu unutar bubnja. Također olakšava pregled prilikom čišćenja podizača i umetaka podizača.",
+    "drum_illumination_desc": "Drum ilimination osvjetljava unutrašnjost bubnja, što vam pomaže prilikom punjenja i pražnjenja uređaja - jednostavno je lakše pronaći zaostalu čarapu unutar bubnja. Također olakšava pregled prilikom čišćenja.",
     "turn_on_drum_illumination": "Uključite/isključite osvjetljenje",
-    "wine_time": "Put",
+    "wine_time": "Vrijeme",
     "delete_account_camel_case": "Izbriši račun",
     "program_mode_desc": "Programski način rada omogućuje vam da prilagodite svoj program sušenja i prilagodite ga prema svojim potrebama. U nastavku možete pročitati o različitim načinima rada i njihovoj funkcionalnosti.",
     "program_mode_available": "Dostupni su sljedeći načini pranja:",
@@ -3731,7 +3731,7 @@
     "target_key": "cilj",
     "asko_oven_factory_reset_content": "Uređaj se može vratiti na tvorničke postavke. Sve osobne postavke i pohranjeni podaci bit će izgubljeni.",
     "invalid_input": "Pogrešan unos.",
-    "key": "Croatian 克罗地亚语",
+    "key": "Croatian",
     "filename": "i18n_hr.json",
     "asko_td_eco_cotton": "ECO pamuk",
     "asko_td_eco_cotton_us": "Normalno",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Provjerite je li vaš bluetooth uključen.",
     "CL_DV_PIND_accessory_firmware_update": "Ažuriranje firmvera dodatne opreme",
     "CL_CF_CS_ble_scan_not_list": "Ako vaš uređaj nije na popisu, možete kliknuti 'POKUŠAJ PONOVO' za ponovno pretraživanje ili kliknite 'DALJE' za konfiguraciju mreže na drugi način.",
-    "CL_CF_CS_ble_scan_have_not_found": "Nismo pronašli nijedan uređaj na bluetooth. Možete kliknuti 'POKUŠAJ PONOVO' za ponovno pretraživanje ili kliknite 'DALJE' za konfiguraciju mreže na drugi način.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nismo pronašli nijedan uređaj na bluetoothu. Možete kliknuti 'POKUŠAJ PONOVNO' za ponovno pretraživanje ili konfigurirati mrežu na drugi način.",
     "CL_DV_WM_pump_cleaning": "Pumpa za čišćenje...",
     "CL_DV_WM_autodoes_tip": "Omogućite ovu značajku i vaš će uređaj pametno dozirati deterdžent i omekšivač dok perete rublje.",
     "CL_DV_WM_detergent_department_key": "ODJELJAK ZA DETERDŽENT",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Ne mogu se sakriti",
     "program_management_unable_to_hide_desc": "Ovo je zadnji vidljivi program i barem jedan program mora ostati vidljiv.",
     "CL_CF_FM_set_deadline": "Odredite rok",
-    "CL_CF_FM_expiry_date_must_be_selected": "Mora biti odabran datum isteka"
+    "CL_CF_FM_expiry_date_must_be_selected": "Mora biti odabran datum isteka",
+    "CL_CF_FM_add_custom_food_desc": "Dodajte novu prilagođenu stavku",
+    "CL_CF_FM_delete_selected_items": "Izbriši odabrane stavke",
+    "CL_CF_FM_delete_selected": "Izbriši odabrano",
+    "CL_DV_HOB_residual_heat_content": "Polje za kuhanje je još vruće. Pazite da ga ne dodirnete.",
+    "CL_CF_FM_add_custom_food": "Dodajte hranu koja nije uključena u biblioteku",
+    "air_care_temp_title": "Standard za procjenu temperature:",
+    "air_care_hum_title": "Standard za procjenu vlažnosti:",
+    "air_care_temp_c": "Dobro: 17 < T < 27 ℃\n Normalno: 10≤T≤17°C, 27≤T≤30°C\n Nije dobro: T < 10°CT > 30°C",
+    "air_care_temp_f": "Dobro: 62,6 < T < 80,6 ℉\n Normalno: 50≤T≤62,6℉,80,6≤T≤86℉\n Nije dobro: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Dobro: H < 70%\n Normalno: 70≤H≤80%\n Nije dobro: H>80%"
 }
