--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Поврзан и вклучен;\nWi-Fi е активиран и поврзан;\nЛозинката за Wi-Fi не е променета неодамна.",
     "dont_remind_again_uppercase": "НЕ ПОДСЕТУВАЈ ПОВТОРНО",
     "storage_tips_title": "Совети за складирање:",
-    "heat_pump_oem": "PRO серија DHW",
+    "heat_pump_oem": "DHW со фиксна брзина",
     "td22_drying_empty_water_tank": "Сушење – Празен резервоар за вода",
     "td22_drying_paused": "Сушењето е прекинато",
     "td22_drying_finished": "Сушењето заврши",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Проверете дали вашиот Bluetooth е вклучен.",
     "CL_DV_PIND_accessory_firmware_update": "Ажурирање на фирмверот за додатоци",
     "CL_CF_CS_ble_scan_not_list": "Ако вашиот уред не е на списокот, можете да кликнете „ПОБИДЕТЕ ПОВТОРНО“ за повторно да пребарувате или кликнете „СЛЕДНО“ за да ја конфигурирате мрежата на друг начин.",
-    "CL_CF_CS_ble_scan_have_not_found": "Не најдовме никаков уред на Bluetooth. Можете да кликнете „ОБИДЕТЕ ПОВТОРНО“ за повторно да пребарувате или кликнете „СЛЕДНО“ за да ја конфигурирате мрежата на друг начин.",
+    "CL_CF_CS_ble_scan_have_not_found": "Ние не пронајдовме ниту еден уред на Bluetooth. Можете да кликнете на \"ПРОБАЈ ПОВТОРНО\" за да пребарувате повторно, или да ја конфигурирате мрежата на друг начин.",
     "CL_DV_WM_pump_cleaning": "Пумпа за чистење...",
     "CL_DV_WM_autodoes_tip": "Овозможете ја оваа функција и вашиот уред паметно ќе дава детергент и омекнувач додека ги перете алиштата.",
     "CL_DV_WM_detergent_department_key": "ПРЕДДЕЛ ЗА ДЕТЕРГЕНТ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Не може да се сокрие",
     "program_management_unable_to_hide_desc": "Ова е последната видлива програма и барем една програма мора да биде видлива.",
     "CL_CF_FM_set_deadline": "Поставете краен рок",
-    "CL_CF_FM_expiry_date_must_be_selected": "Мора да се избере датумот на истекување"
+    "CL_CF_FM_expiry_date_must_be_selected": "Мора да се избере датумот на истекување",
+    "CL_CF_FM_add_custom_food_desc": "Додадете нова приспособена ставка",
+    "CL_CF_FM_delete_selected_items": "Избришете ги избраните ставки",
+    "CL_CF_FM_delete_selected": "Избриши го избраното",
+    "CL_DV_HOB_residual_heat_content": "Зоната за готвење е сè уште топла. Внимавајте да не го допирате.",
+    "CL_CF_FM_add_custom_food": "Додадете храна што не е вклучена во библиотеката",
+    "air_care_temp_title": "Стандард за проценка на температурата:",
+    "air_care_hum_title": "Стандард за проценка на влажност:",
+    "air_care_temp_c": "Добро: 17 < T < 27℃\n Нормално: 10≤T≤17°C, 27≤T≤30°C\n Не е добро: T < 10°CT > 30°C",
+    "air_care_temp_f": "Добро: 62,6 < T < 80,6 ℉\n Нормално: 50≤T≤62,6℉,80,6≤T≤86℉\n Не е добро: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Добро: H < 70%\n Нормално: 70≤H≤80%\n Не е добро: H＞80%"
 }
