--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Tilkoblet og slått på;\nWi-Fi er aktivert og tilkoblet;\nWi-Fi-passordet er ikke nylig endret.",
     "dont_remind_again_uppercase": "IKKE PÅMINN IGJEN",
     "storage_tips_title": "Oppbevaringstips:",
-    "heat_pump_oem": "PRO-serien varmtvann",
+    "heat_pump_oem": "Varmtvann med fast hastighet",
     "td22_drying_empty_water_tank": "Tørking – Tøm vanntanken",
     "td22_drying_paused": "Tørking stoppet",
     "td22_drying_finished": "Tørking ferdig",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Sørg for at Bluetooth er slått på.",
     "CL_DV_PIND_accessory_firmware_update": "Oppdatering av tilbehørsfastvare",
     "CL_CF_CS_ble_scan_not_list": "Hvis enheten din ikke er oppført, kan du klikke \"PRØV IGJEN\" for å søke på nytt, eller klikk \"NESTE\" for å konfigurere nettverket på en annen måte.",
-    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke funnet noen enhet på bluetooth. Du kan klikke \"PRØV IGJEN\" for å søke på nytt, eller klikk \"NESTE\" for å konfigurere nettverket på en annen måte.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke funnet noen enhet på Bluetooth. Du kan klikke på \"PRØV IGJEN\" for å søke på nytt, eller konfigurere nettverket på en annen måte.",
     "CL_DV_WM_pump_cleaning": "Rengjør pumpen...",
     "CL_DV_WM_autodoes_tip": "Aktiver denne funksjonen, og enheten vil på en smart måte dispensere vaskemiddel og tøymykner mens du vasker.",
     "CL_DV_WM_detergent_department_key": "VASKEMIDDELROM",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Kan ikke skjule",
     "program_management_unable_to_hide_desc": "Dette er det siste synlige programmet og minst ett program må holdes synlig.",
     "CL_CF_FM_set_deadline": "Sett en frist",
-    "CL_CF_FM_expiry_date_must_be_selected": "Utløpsdato må velges"
+    "CL_CF_FM_expiry_date_must_be_selected": "Utløpsdato må velges",
+    "CL_CF_FM_add_custom_food_desc": "Legg til et nytt tilpasset element",
+    "CL_CF_FM_delete_selected_items": "Slett valgte elementer",
+    "CL_CF_FM_delete_selected": "Slett valgte",
+    "CL_DV_HOB_residual_heat_content": "Kokesonen er fortsatt varm. Vær forsiktig så du ikke berører den.",
+    "CL_CF_FM_add_custom_food": "Legg til mat som ikke er inkludert i biblioteket",
+    "air_care_temp_title": "Temperaturevalueringsstandard:",
+    "air_care_hum_title": "Fuktighetsevalueringsstandard:",
+    "air_care_temp_c": "Bra: 17 < T < 27 ℃\n Normal: 10≤T≤17°C, 27≤T≤30°C\n Ikke bra: T < 10°CT > 30°C",
+    "air_care_temp_f": "Bra: 62,6 < T < 80,6℉\n Normal: 50≤T≤62,6℉, 80,6≤T≤86℉\n Ikke bra: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Bra: H < 70 %\n Normal: 70≤H≤80 %\n Ikke bra: H＞80 %"
 }
