--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Включено и включено;\nWi-Fi е активиран и свързан;\nПаролата за Wi-Fi не е променяна наскоро.",
     "dont_remind_again_uppercase": "НЕ НАПОМЕНАВАЙ ПОВТОРНО",
     "storage_tips_title": "Съвети за съхранение:",
-    "heat_pump_oem": "Серия PRO БГВ",
+    "heat_pump_oem": "БГВ с фиксирана скорост",
     "td22_drying_empty_water_tank": "Сушене – Изпразнете резервоара за вода",
     "td22_drying_paused": "Сушенето е спряно",
     "td22_drying_finished": "Сушенето приключи",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Уверете се, че вашият bluetooth е включен.",
     "CL_DV_PIND_accessory_firmware_update": "Актуализация на фърмуера на аксесоара",
     "CL_CF_CS_ble_scan_not_list": "Ако вашето устройство не е в списъка, можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново, или да щракнете върху „СЛЕДВАЩ“, за да конфигурирате мрежата по друг начин.",
-    "CL_CF_CS_ble_scan_have_not_found": "Не открихме устройство с Bluetooth. Можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново, или да щракнете върху „СЛЕДВАЩ“, за да конфигурирате мрежата по друг начин.",
+    "CL_CF_CS_ble_scan_have_not_found": "Не намерихме нито едно устройство с bluetooth. Можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново или да конфигурирате мрежата по друг начин.",
     "CL_DV_WM_pump_cleaning": "Почистваща помпа...",
     "CL_DV_WM_autodoes_tip": "Активирайте тази функция и вашето устройство интелигентно ще дозира препарат и омекотител, докато перете прането си.",
     "CL_DV_WM_detergent_department_key": "ОТДЕЛЕНИЕ ЗА ПЕРИЛЕН ПРЕПАРАТ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Не може да се скрие",
     "program_management_unable_to_hide_desc": "Това е последната видима програма и поне една програма трябва да остане видима.",
     "CL_CF_FM_set_deadline": "Поставете краен срок",
-    "CL_CF_FM_expiry_date_must_be_selected": "Трябва да се избере срок на годност"
+    "CL_CF_FM_expiry_date_must_be_selected": "Трябва да се избере срок на годност",
+    "CL_CF_FM_add_custom_food_desc": "Добавете нов персонализиран артикул",
+    "CL_CF_FM_delete_selected_items": "Изтриване на избраните елементи",
+    "CL_CF_FM_delete_selected": "Изтриване на избраното",
+    "CL_DV_HOB_residual_heat_content": "Зоната за готвене е все още гореща. Внимавайте да не го докоснете.",
+    "CL_CF_FM_add_custom_food": "Добавете храна, която не е включена в библиотеката",
+    "air_care_temp_title": "Стандарт за оценка на температурата:",
+    "air_care_hum_title": "Стандарт за оценка на влажността:",
+    "air_care_temp_c": "Добър: 17 < T < 27 ℃\n Нормално: 10≤T≤17°C, 27≤T≤30°C\n Не е добре: T < 10°CT > 30°C",
+    "air_care_temp_f": "Добър: 62,6 < T < 80,6℉\n Нормално: 50≤T≤62.6℉,80.6≤T≤86℉\n Не е добре: T<50℉ T>86℉",
+    "air_care_hum_tips": "Добър: H < 70%\n Нормално: 70≤H≤80%\n Не е добре: H>80%"
 }
