--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "وصل شده و روشن است؛\nWi-Fi فعال شده و متصل است؛\nرمز عبور Wi-Fi اخیراً تغییر نکرده است.",
     "dont_remind_again_uppercase": "دوباره یادآوری نکنید",
     "storage_tips_title": "نکات ذخیره سازی:",
-    "heat_pump_oem": "سری PRO DHW",
+    "heat_pump_oem": "DHW با سرعت ثابت",
     "td22_drying_empty_water_tank": "خشک کردن - مخزن آب خالی",
     "td22_drying_paused": "خشک کردن متوقف شد",
     "td22_drying_finished": "خشک کردن به پایان رسید",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "مطمئن شوید که بلوتوث شما روشن است.",
     "CL_DV_PIND_accessory_firmware_update": "به روز رسانی سیستم عامل لوازم جانبی",
     "CL_CF_CS_ble_scan_not_list": "اگر دستگاه شما در لیست نیست، می‌توانید برای جستجوی دوباره روی «امتحان مجدد» کلیک کنید، یا برای پیکربندی شبکه به روش دیگری روی «بعدی» کلیک کنید.",
-    "CL_CF_CS_ble_scan_have_not_found": "ما هیچ دستگاهی در بلوتوث پیدا نکرده‌ایم. می‌توانید برای جستجوی دوباره روی «امتحان مجدد» کلیک کنید، یا برای پیکربندی شبکه به روش دیگری روی «بعدی» کلیک کنید.",
+    "CL_CF_CS_ble_scan_have_not_found": "ما هیچ دستگاهی در بلوتوث پیدا نکردیم. می‌توانید برای جستجوی دوباره روی «تلاش مجدد» کلیک کنید یا شبکه را به روش دیگری پیکربندی کنید.",
     "CL_DV_WM_pump_cleaning": "پمپ نظافت ...",
     "CL_DV_WM_autodoes_tip": "این ویژگی را فعال کنید و دستگاه شما به طور هوشمندانه مواد شوینده و نرم کننده پارچه را در حین شستن لباس ها پخش می کند.",
     "CL_DV_WM_detergent_department_key": "محفظه مواد شوینده",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "قادر به پنهان کردن نیست",
     "program_management_unable_to_hide_desc": "این آخرین برنامه قابل مشاهده است و حداقل یک برنامه باید قابل مشاهده باشد.",
     "CL_CF_FM_set_deadline": "یک ضرب الاجل تعیین کنید",
-    "CL_CF_FM_expiry_date_must_be_selected": "تاریخ انقضا باید انتخاب شود"
+    "CL_CF_FM_expiry_date_must_be_selected": "تاریخ انقضا باید انتخاب شود",
+    "CL_CF_FM_add_custom_food_desc": "یک مورد سفارشی جدید اضافه کنید",
+    "CL_CF_FM_delete_selected_items": "موارد انتخاب شده را حذف کنید",
+    "CL_CF_FM_delete_selected": "حذف انتخاب شده",
+    "CL_DV_HOB_residual_heat_content": "منطقه پخت هنوز گرم است. مراقب باشید به آن دست نزنید.",
+    "CL_CF_FM_add_custom_food": "افزودن غذاهایی که در کتابخانه گنجانده نشده است",
+    "air_care_temp_title": "استاندارد ارزیابی دما:",
+    "air_care_hum_title": "استاندارد ارزیابی رطوبت:",
+    "air_care_temp_c": "خوب: 17 < T < 27 ℃\n نرمال: 10≤T≤17°C، 27≤T≤30°C\n خوب نیست: T < 10°CT > 30°C",
+    "air_care_temp_f": "خوب: 62.6 < T < 80.6 ℉\n نرمال: 50≤T≤62.6℉،80.6≤T≤86℉\n خوب نیست: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "خوب: H < 70%\n نرمال: 70≤H≤80%\n خوب نیست: H＞80٪"
 }
