--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Подключено и включено;\nWi-Fi активировано и подключено;\nПароль Wi-Fi недавно не изменялся.",
     "dont_remind_again_uppercase": "БОЛЬШЕ НЕ НАПОМИНАТЬ",
     "storage_tips_title": "Советы по хранению:",
-    "heat_pump_oem": "PRO series DHW",
+    "heat_pump_oem": "ГВС с фиксированной скоростью",
     "td22_drying_empty_water_tank": "Сушка – пустой бак для воды",
     "td22_drying_paused": "Сушка приостановлена",
     "td22_drying_finished": "Сушка завершена",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Убедитесь, что Bluetooth включен.",
     "CL_DV_PIND_accessory_firmware_update": "Обновление прошивки аксессуара",
     "CL_CF_CS_ble_scan_not_list": "Если вашего устройства нет в списке, вы можете нажать «ПОПРОБОВАТЬ ЕЩЕ РАЗ», чтобы повторить поиск, или нажать «ДАЛЕЕ», чтобы настроить сеть другим способом.",
-    "CL_CF_CS_ble_scan_have_not_found": "Мы не нашли ни одного устройства Bluetooth. Вы можете нажать «ПОВТОРИТЬ ПОПРОБОВКУ», чтобы повторить поиск, или нажать «ДАЛЕЕ», чтобы настроить сеть другим способом.",
+    "CL_CF_CS_ble_scan_have_not_found": "Мы не нашли ни одного устройства по bluetooth. Вы можете нажать \"TRY AGAIN\" для повторного поиска или настроить сеть другим способом.",
     "CL_DV_WM_pump_cleaning": "Очистка насоса...",
     "CL_DV_WM_autodoes_tip": "Включите эту функцию, и ваше устройство будет автоматически дозировать моющее средство и кондиционер для белья, пока вы стираете.",
     "CL_DV_WM_detergent_department_key": "ОТСЕК ДЛЯ МОЮЩЕГО СРЕДСТВА",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Невозможно скрыть",
     "program_management_unable_to_hide_desc": "Это последняя видимая программа, и по крайней мере одна программа должна быть видна.",
     "CL_CF_FM_set_deadline": "Установите крайний срок",
-    "CL_CF_FM_expiry_date_must_be_selected": "Необходимо выбрать дату истечения срока действия."
+    "CL_CF_FM_expiry_date_must_be_selected": "Необходимо выбрать дату истечения срока действия.",
+    "CL_CF_FM_add_custom_food_desc": "Добавить новый индивидуальный элемент",
+    "CL_CF_FM_delete_selected_items": "Удалить выбранные элементы",
+    "CL_CF_FM_delete_selected": "Удалить выбранное",
+    "CL_DV_HOB_residual_heat_content": "Зона приготовления пищи все еще горячая. Будьте осторожны, не прикасайтесь к ней.",
+    "CL_CF_FM_add_custom_food": "Добавить еду, не включенную в библиотеку",
+    "air_care_temp_title": "Стандарт оценки температуры:",
+    "air_care_hum_title": "Стандарт оценки влажности:",
+    "air_care_temp_c": "Хорошо: 17 < T < 27℃\n Норма: 10≤T≤17°C, 27≤T≤30°C\n Нехорошо: T < 10°CT > 30°C",
+    "air_care_temp_f": "Хорошо: 62,6 < T < 80,6℉\n Норма: 50≤T≤62.6℉,80.6≤T≤86℉\n Нехорошо: T＜50℉ T＞86℉",
+    "air_care_hum_tips": "Хорошо: В < 70%\n Норма: 70≤H≤80%\n Нехорошо: H＞80%"
 }
