--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Підключено і ввімкнено;\nWi-Fi активовано і підключено;\nПароль Wi-Fi не змінювався останнім часом.",
     "dont_remind_again_uppercase": "НЕ НАГАДУВАТИ БІЛЬШЕ",
     "storage_tips_title": "Поради щодо зберігання",
-    "heat_pump_oem": "Пральні машини серії PRO",
+    "heat_pump_oem": "ГВП з фіксованою швидкістю",
     "td22_drying_empty_water_tank": "Сушіння: спорожніть резервуар для води",
     "td22_drying_paused": "Сушіння зупинено",
     "td22_drying_finished": "Сушіння завершено",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Переконайтеся, що ваш bluetooth увімкнено.",
     "CL_DV_PIND_accessory_firmware_update": "Оновлення прошивки аксесуара",
     "CL_CF_CS_ble_scan_not_list": "Якщо вашого пристрою немає в списку, ви можете натиснути «СПРОБУВАТИ ЩЕ РАЗ», щоб виконати пошук знову, або натиснути «ДАЛІ», щоб налаштувати мережу іншим способом.",
-    "CL_CF_CS_ble_scan_have_not_found": "Ми не знайшли жодного пристрою з підтримкою bluetooth. Ви можете натиснути «СПРОБУВАТИ ЗНОВУ», щоб виконати пошук ще раз, або натиснути «ДАЛІ», щоб налаштувати мережу іншим способом.",
+    "CL_CF_CS_ble_scan_have_not_found": "Ми не знайшли жодного пристрою на блютуз. Ви можете натиснути «СПРОБУВАТИ ЗНОВУ», щоб знову шукати, або налаштувати мережу іншим способом.",
     "CL_DV_WM_pump_cleaning": "Очисний насос...",
     "CL_DV_WM_autodoes_tip": "Увімкніть цю функцію, і ваш пристрій розумно дозуватиме миючий засіб і пом’якшувач тканини, поки ви пратимете білизну.",
     "CL_DV_WM_detergent_department_key": "ВІДДІЛЕННЯ МИЮЧОГО ЗАСОБУ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Неможливо сховатися",
     "program_management_unable_to_hide_desc": "Це остання видима програма, і принаймні одна програма має бути видимою.",
     "CL_CF_FM_set_deadline": "Встановіть крайній термін",
-    "CL_CF_FM_expiry_date_must_be_selected": "Потрібно вибрати термін придатності"
+    "CL_CF_FM_expiry_date_must_be_selected": "Потрібно вибрати термін придатності",
+    "CL_CF_FM_add_custom_food_desc": "Додайте новий індивідуальний елемент",
+    "CL_CF_FM_delete_selected_items": "Видалити вибрані елементи",
+    "CL_CF_FM_delete_selected": "Видалити вибране",
+    "CL_DV_HOB_residual_heat_content": "Конфорка ще гаряча. Будьте обережні, щоб не торкнутися його.",
+    "CL_CF_FM_add_custom_food": "Додайте їжу, яка не включена в бібліотеку",
+    "air_care_temp_title": "Стандарт оцінки температури:",
+    "air_care_hum_title": "Стандарт оцінки вологості:",
+    "air_care_temp_c": "Добре: 17 < T < 27 ℃\n Нормальна: 10≤T≤17°C, 27≤T≤30°C\n Погано: T < 10°CT > 30°C",
+    "air_care_temp_f": "Добре: 62,6 < T < 80,6℉\n Нормальний: 50≤T≤62,6℉,80,6≤T≤86℉\n Не добре: T<50℉ T>86℉",
+    "air_care_hum_tips": "Добре: H < 70%\n Нормальний: 70≤H≤80%\n Погано: H>80%"
 }
